--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ language: ruby
 rvm:
  - 2.3.3
 before_script:
-  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-  - chmod +x ./cc-test-reporter
-  - ./cc-test-reporter before-build
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./student_test.rb
+  - chmod +x ./student_test.rb
+  - ./student_test.rb before-build
 script:
   - bundle exec rspec
 after_script:
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - ./student_test.rb after-build --exit-code $TRAVIS_TEST_RESULT
