--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,6 @@
-env:
-  global:
-    - CC_TEST_REPORTER_ID=ABC123
 language: ruby
 rvm:
  - 2.3.3
-before_script:
-  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./student_test.rb
-  - chmod +x ./student_test.rb
-  - ./student_test.rb before-build
 script:
-  - bundle exec rspec
-after_script:
-  - ./student_test.rb after-build --exit-code $TRAVIS_TEST_RESULT
+  - bundle exec rails db:migrate RAILS_ENV=test
+  - bundle exec rake
