--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,20 @@
+env:
+  global:
+    - CC_TEST_REPORTER_ID=f4ef40aa30ae5b450a60e5cca365a73f0ba55835fb381d345b93a88fe4944335
+
 language: ruby
+
 rvm:
  - 2.3.3
-script:
+
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+
+  script:
   - bundle exec rails db:migrate RAILS_ENV=test
   - bundle exec rake
+
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
