--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,3 @@
-deploy:
-  provider: heroku
-  api_key:
-    secure: "df577aa7-6cc6-40a7-ae9c-eee26c1e87bb"
 env:
   global:
     - CC_TEST_REPORTER_ID=f4ef40aa30ae5b450a60e5cca365a73f0ba55835fb381d345b93a88fe4944335
@@ -22,3 +18,14 @@ script:
 
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+
+deploy:
+  provider: heroku
+  api_key:
+    secure: "df577aa7-6cc6-40a7-ae9c-eee26c1e87bb"
+  app: enzop26-backend
+  on:
+    repo: EnzoP26/backend
+  script: 
+  - bundle exec rake db:create
+  - bundle exec rake db:migrate
